--- a/Petrichordal/Assembly-CSharp.csproj
+++ b/Petrichordal/Assembly-CSharp.csproj
@@ -70,8 +70,8 @@
     <Compile Include="Assets\Scripts\DestroyByTime.cs" />
     <Compile Include="Assets\Scripts\EvasiveManuever.cs" />
     <Compile Include="Assets\Scripts\GameController.cs" />
-    <Compile Include="Assets\Scripts\Lvl1_EnemyWave01.cs" />
-    <Compile Include="Assets\Scripts\Lvl1_Wave01Mover.cs" />
+    <Compile Include="Assets\Scripts\Level_01\Lvl1_EnemyWave01.cs" />
+    <Compile Include="Assets\Scripts\Level_01\Lvl1_Wave01Mover.cs" />
     <Compile Include="Assets\Scripts\Mover.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\WeaponController.cs" />
