--- a/Petrichordal/Assembly-CSharp.csproj
+++ b/Petrichordal/Assembly-CSharp.csproj
@@ -80,17 +80,20 @@
     <Compile Include="Assets\Addons\Tilemap\Tiles\Rule Tile\Scripts\RuleTile.cs" />
     <Compile Include="Assets\Addons\Tilemap\Tiles\Terrain Tile\Scripts\TerrainTile.cs" />
     <Compile Include="Assets\Addons\Tilemap\Tiles\Weighted Random Tile\WeightedRandomTile.cs" />
-    <Compile Include="Assets\NewBehaviourScript.cs" />
     <Compile Include="Assets\RenderQueue.cs" />
     <Compile Include="Assets\Scripts\_Level_Managers\Lvl1_Manager.cs" />
     <Compile Include="Assets\Scripts\Audio Scripts\BeatSystem.cs" />
     <Compile Include="Assets\Scripts\BGScrollerX.cs" />
+    <Compile Include="Assets\Scripts\Bosses\BossHurt.cs" />
+    <Compile Include="Assets\Scripts\Bosses\Level_01\WardenBoss.cs" />
     <Compile Include="Assets\Scripts\Damage.cs" />
     <Compile Include="Assets\Scripts\DestroyByBoundary.cs" />
     <Compile Include="Assets\Scripts\DestroyByContact.cs" />
     <Compile Include="Assets\Scripts\DestroyByTime.cs" />
     <Compile Include="Assets\Scripts\Enemy_Movement\Enemy_Movement_01.cs" />
     <Compile Include="Assets\Scripts\Enemy_Movement\Enemy_Movement_02.cs" />
+    <Compile Include="Assets\Scripts\Enemy_Shots\Boss_Shot.cs" />
+    <Compile Include="Assets\Scripts\Enemy_Shots\Boss_Shot02.cs" />
     <Compile Include="Assets\Scripts\Enemy_Shots\Enemy_Shot_02.cs" />
     <Compile Include="Assets\Scripts\EvasiveManuever.cs" />
     <Compile Include="Assets\Scripts\FireballMover.cs" />
