--- a/Petrichordal/Assembly-CSharp.csproj
+++ b/Petrichordal/Assembly-CSharp.csproj
@@ -87,9 +87,8 @@
     <Compile Include="Assets\Scripts\ButtonScripts.cs" />
     <Compile Include="Assets\Scripts\CerasBranch\destructibletile.cs" />
     <Compile Include="Assets\Scripts\CerasBranch\Enemy.cs" />
-    <Compile Include="Assets\Scripts\CerasBranch\EnemyAir1.cs" />
     <Compile Include="Assets\Scripts\CerasBranch\EnemyBullet.cs" />
-    <Compile Include="Assets\Scripts\CerasBranch\EnemyGround1Script.cs" />
+    <Compile Include="Assets\Scripts\CerasBranch\EnemyLazar.cs" />
     <Compile Include="Assets\Scripts\CerasBranch\EventSandWorm.cs" />
     <Compile Include="Assets\Scripts\CerasBranch\eventtrigger.cs" />
     <Compile Include="Assets\Scripts\CerasBranch\SandWormHazard.cs" />
@@ -110,6 +109,7 @@
     <Compile Include="Assets\Scripts\FireballMover.cs" />
     <Compile Include="Assets\Scripts\GameController.cs" />
     <Compile Include="Assets\Scripts\Health.cs" />
+    <Compile Include="Assets\Scripts\lazarglow.cs" />
     <Compile Include="Assets\Scripts\Level3BossTrigger.cs" />
     <Compile Include="Assets\Scripts\LevelTransition.cs" />
     <Compile Include="Assets\Scripts\LevelTransitionMusicStop.cs" />
