--- a/Petrichordal/Assembly-CSharp.csproj
+++ b/Petrichordal/Assembly-CSharp.csproj
@@ -77,7 +77,9 @@
      <Compile Include="Assets\Scripts\BGScrollerX.cs" />
      <Compile Include="Assets\Scripts\Bosses\BossHurt.cs" />
      <Compile Include="Assets\Scripts\Bosses\Level_01\WardenBoss.cs" />
-     <Compile Include="Assets\Scripts\Bosses\Level_04\SpaceStation.cs" />
+     <Compile Include="Assets\Scripts\Bosses\Level_04\Loop.cs" />
+     <Compile Include="Assets\Scripts\Bosses\Level_04\SpaceStationParts.cs" />
+     <Compile Include="Assets\Scripts\Bosses\Level_04\SpaceStationWhole.cs" />
      <Compile Include="Assets\Scripts\ButtonScripts.cs" />
      <Compile Include="Assets\Scripts\CerasBranch\destructibletile.cs" />
      <Compile Include="Assets\Scripts\CerasBranch\Enemy.cs" />
