more sound stuff
- most sfx
- temp music for levels 1, 2, 4
- final music for level 3
- boss music for level 1 and 2 (might not stop after defeating level 2 boss)
- sound manager script, reworking of how sounds are played

--- a/Petrichordal/Assembly-CSharp.csproj
+++ b/Petrichordal/Assembly-CSharp.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Assets\Scripts\_Level_Managers\Lvl1_Manager.cs" />
     <Compile Include="Assets\Scripts\_Level_Managers\Lvl2_Manager.cs" />
     <Compile Include="Assets\Scripts\Audio Scripts\BeatSystem.cs" />
+    <Compile Include="Assets\Scripts\Audio Scripts\SoundManager.cs" />
     <Compile Include="Assets\Scripts\BGScrollerX.cs" />
     <Compile Include="Assets\Scripts\Bosses\BossDead.cs" />
     <Compile Include="Assets\Scripts\Bosses\BossHurt.cs" />
